--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
-FROM php:8.1-fpm-alpine
+FROM php:8.1-fpm
 
-RUN apt-get update && apt-get isntall -y \
+RUN apt-get update && apt-get install -y \
     git \
     curl \
     zip \
@@ -9,6 +9,6 @@ RUN apt-get update && apt-get isntall -y \
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-RUN docker-php-exe-install pdo pdo_mysql
+RUN docker-php-ext-install pdo pdo_mysql
 
 WORkDIR /var/www
