--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     container_name: shm-app
     restart: always
     working_dir: /var/www/
+#    extra_hosts:
+#      - host.docker.internal:host-gateway
     volumes:
       - ../src:/var/www
   nginx:
