Add mysql image in docker composer and add ext-pdo in composer and create DB Class for connection to database and use config class

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,3 +20,13 @@ services:
     volumes:
       - ../src:/var/www
       - ./nginx:/etc/nginx/conf.d
+  db:
+    image: mysql:8.0
+    container_name: shm-db
+    restart: always
+    volumes:
+      - ./storage/mysql:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "3306:3306"
