--- a/src/composer.json
+++ b/src/composer.json
@@ -9,6 +9,9 @@
       "Tests\\": "tests/"
     }
   },
+  "require": {
+    "ext-pdo": "*"
+  },
     "require-dev": {
       "phpunit/phpunit": "^9.6"
   }
